# speakeasy-granite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml  speakeasy-cpu.spec  speakeasy.spec
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hooks/: hook-transformers.py
installer/: Build-Installer.ps1  Install-SpeakEasy-Source.ps1  cohere-model-setup.ps1  granite-model-setup.ps1  speakeasy-cpu-setup.iss  speakeasy-setup.iss
speakeasy/: __init__.py  __main__.py  _build_variant.py  _constants.py  _resource_monitor.py  _runtime_hook_dll.py  audio.py  clipboard.py  config.py  developer_panel.py  gpu_monitor.py  history_widget.py  hotkeys.py  main_window.py  model_downloader.py  pro_mode_widget.py  pro_preset.py  settings_dialog.py  status_pills.py  text_processor.py  theme.py  workers.py
tests/: AUDIT_REPORT.md  conftest.py  test_audio.py  test_audio_utils.py  test_build_naming.py  test_cohere_transcribe.py  test_config.py  test_config_persistence.py  test_developer_panel_live.py  test_developer_panel_window.py  test_engine_base.py  test_engine_load.py  test_frozen_compat.py  test_granite_transcribe.py  test_hotkey_registration.py  test_integration_full_flow.py  test_logging_buffer.py  test_logs_widget.py  test_main_window_layout.py  test_metric_forwarding.py  test_model_downloader.py  test_model_presence.py  test_pro_mode_widget.py  test_pro_preset.py  test_professional_mode.py  test_realtime_widget.py  test_settings_dialog.py  test_settings_widget.py  test_text_processor.py  test_token_sparkline.py
(+9 files in other folders)
