[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speakeasy"]

[project]
name = "speakeasy-granite"
version = "0.8.1"
description = "SpeakEasy AI Granite — Native Windows speech-to-text and speech translation with IBM Granite Speech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "kwp490" }]

dependencies = [
    "PySide6>=6.6,<7",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "nvidia-ml-py>=12.0; sys_platform == 'win32'",
    "openai>=1.0",
    "keyring>=25.0",
    "transformers>=5.4.0",
    "accelerate>=1.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    "huggingface-hub>=0.34.0",
    "sentencepiece",
    "protobuf",
    "librosa>=0.10",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.2",
    "pip-audit>=2.7",
]

[project.scripts]
speakeasy = "speakeasy.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--timeout=120"

[tool.uv]
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
